--- a/src/app/company-add/company-add.component.css
+++ b/src/app/company-add/company-add.component.css
@@ -12,3 +12,15 @@
 .panel-body{
     padding-top:30px;
 }
+
+.selected{
+	border:solid #4CAF50 1px;
+	float:left; 
+	margin:2px;
+	padding:2px 15px;
+}
+ 
+.selected a{
+	cursor:pointer;
+	font-weight:bold;
+}
